<resources>
    <!-- Lightsaber Screen -->
    <string name="lightsaber_screen_settings_icon">settings icon</string>
    <string name="lightsaber_screen_lightsaber_blade">lightsaber blade</string>
    <string name="lightsaber_screen_lightsaber_handle">lightsaber handle</string>

    <!-- Settings Screen -->
    <string name="settings_screen_app_bar_title">Settings</string>
    <string name="settings_screen_app_bar_back">exit settings</string>
    <string name="settings_screen_lightsaber_group">Lightsaber</string>
    <string name="settings_screen_lightsaber_blade_color">Blade Color</string>
    <string name="settings_screen_about_group">About</string>
    <string name="settings_screen_version">Version</string>
    <string name="settings_screen_selected_color_description">Selected color</string>
    <string name="settings_screen_custom_color_description">Custom Color</string>

    <!-- Color Picker Dialog -->
    <string name="color_picker_dialog_title">Select a Color</string>
    <string name="color_picker_dialog_button_ok">OK</string>
    <string name="color_picker_dialog_button_cancel">Cancel</string>

    <!-- Blade Colors -->
    <string name="lightsaber_color_green">Green</string>
    <string name="lightsaber_color_red">Red</string>
    <string name="lightsaber_color_blue">Blue</string>
    <string name="lightsaber_color_yellow">Yellow</string>
    <string name="lightsaber_color_purple">Purple</string>
    <string name="lightsaber_color_custom">Custom</string>
</resources>